change time to 30secs and added hit animation

--- a/index.html
+++ b/index.html
@@ -13,27 +13,31 @@
   <main>
     <h1>Whack a Mole</h1>
     <section class="game">
-      <p>Time Left: <span id="timeLeft">20 secs</span></p>
+      <p>Time Left: <span id="timeLeft">30 secs</span></p>
       <div class="gameBoard">
         <ul>
           <li class="holeContainer holeContainer1">
             <div class="hole hole1">
               <img src="./images/resetti.png" class="mole mole1">
+              <img src="./images/smack.png" class="hit hit1">
             </div>
           </li>
           <li class="holeContainer holeContainer2">
             <div class="hole hole2">
               <img src="./images/resetti.png" class="mole mole2">
+              <img src="./images/smack.png" class="hit hit2">
             </div>
           </li>
           <li class="holeContainer holeContainer3">
             <div class="hole hole3">
               <img src="./images/resetti.png" class="mole mole3">
+              <img src="./images/smack.png" class="hit hit3">
             </div>
           </li>
           <li class="holeContainer holeContainer4">
             <div class="hole hole4">
               <img src="./images/resetti.png" class="mole mole4">
+              <img src="./images/smack.png" class="hit hit4">
             </div>
           </li>
         </ul>
@@ -44,7 +48,6 @@
         <button class="startGamePrompt">Confirm</button>
       </div>
     </section>
-
     <section class="bottomScoreSection">
     <p>Score: <span class="score">0</span></p>
     <div class="message"></div>
