added music and copyright

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   <title>Whack a mole</title>
   <link rel="stylesheet" href="styles/style.css"></link>
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <link type="image/png" href="./images/faviconAnimalCrossing.jpg" rel="icon">
+  <link type="image/png" href="./assets/faviconAnimalCrossing.jpg" rel="icon">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+  integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body>
+  <!-- PICTURE AND MUSIC BY NINTENDO! -->
   <main>
     <h1>Whack a Mole</h1>
     <section class="game">
@@ -18,26 +21,26 @@
         <ul>
           <li class="holeContainer holeContainer1">
             <div class="hole hole1">
-              <img src="./images/resetti.png" class="mole mole1">
-              <img src="./images/smack.png" class="hit hit1">
+              <img src="./assets/resetti.png" class="mole mole1">
+              <img src="./assets/smack.png" class="hit hit1">
             </div>
           </li>
           <li class="holeContainer holeContainer2">
             <div class="hole hole2">
-              <img src="./images/resetti.png" class="mole mole2">
-              <img src="./images/smack.png" class="hit hit2">
+              <img src="./assets/resetti.png" class="mole mole2">
+              <img src="./assets/smack.png" class="hit hit2">
             </div>
           </li>
           <li class="holeContainer holeContainer3">
             <div class="hole hole3">
-              <img src="./images/resetti.png" class="mole mole3">
-              <img src="./images/smack.png" class="hit hit3">
+              <img src="./assets/resetti.png" class="mole mole3">
+              <img src="./assets/smack.png" class="hit hit3">
             </div>
           </li>
           <li class="holeContainer holeContainer4">
             <div class="hole hole4">
-              <img src="./images/resetti.png" class="mole mole4">
-              <img src="./images/smack.png" class="hit hit4">
+              <img src="./assets/resetti.png" class="mole mole4">
+              <img src="./assets/smack.png" class="hit hit4">
             </div>
           </li>
         </ul>
@@ -54,6 +57,10 @@
     <button class="instructionPrompt">Start Game!</button>
     </section>
   </main>
+  <footer>
+    <p>Pictures and music by Nintendo!</p>
+    <p>Copyright <i class="far fa-copyright"></i> 2019 Howard Chen</p>
+  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="scripts/script.js"></script>
 </body>
